# text_scrum_board

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  architecture.txt
include/: board.h  column.h  developer.h  ftxui.h  json_worker.h  manager.h  task.h
src/: board.cpp  column.cpp  developer.cpp  developers.cpp  ftxui.cpp  json_worker.cpp  main.cpp  manager.cpp  scrum_board.cpp  task.cpp
test/: test_board.cpp  test_column.cpp  test_developer.cpp  test_main.cpp  test_manager.cpp  test_search.cpp  test_task.cpp
